--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "dev": "cross-env NODE_ENV=development node ./scripts/dev.js"
   },
   "dependencies": {
+    "apisauce": "^0.14.1",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "crypto": "^1.0.1",
+    "dateformat": "^2.0.0",
     "express": "^4.15.2",
     "express-wrap-async": "^1.0.3",
     "morgan": "^1.8.1",
+    "node-cron": "^1.2.1",
     "ramda": "^0.23.0",
     "winston": "^2.3.1"
   },
